syntax = "proto3";

package dvfiataccounts;

import "common/errors.proto";
import "recipients/recipients.proto";
import "uoms/uoms.proto";
import "bankaccounts/bankaccounts.proto";
import "bankbranches/bankbranches.proto";

// Backed by table 'recipients' + 'dvfiataccounts'
// dvfiataccounts are recipients of type 1
message DVFiatAccount {
  recipients.Recipient recipient = 1;
  // Fields from table 'dvfiataccounts'
  bankbranches.BankBranch bank_branch = 2;
  bankaccounts.Type bank_account_type = 3;
  optional uoms.UoM currency = 4; // nil if multi-currency account
  string pan = 5;
  optional string masked_pan = 6;
  optional string bban = 7;
  optional string iban = 8;
  optional string external_id = 9;
}

message List {
  repeated DVFiatAccount list = 1;
}

message CreateRequest {
  recipients.CreateRequest recipient = 1;
  optional bankbranches.Select bank_branch = 2;
  optional bankaccounts.Type bank_account_type = 3;
  optional uoms.Select currency = 4; // nil if multi-currency account, potentially supports cryptocurrencies
  optional string pan = 5;
  optional string masked_pan = 6;
  optional string bban = 7;
  optional string iban = 8;
  optional string external_id = 9;
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    DVFiatAccount dvfiataccount = 2;
  }
}

message UpdateRequest {
  recipients.UpdateRequest recipient = 1;
  optional bankbranches.Select bank_branch = 2;
  optional bankaccounts.Type bank_account_type = 3;
  optional uoms.Select currency = 4;
  optional string pan = 5;
  optional string masked_pan = 6;
  optional string bban = 7;
  optional string iban = 8;
  optional string external_id = 9;
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    DVFiatAccount dvfiataccount = 2;
  }
}

// An error is returned if there is more than one record found.
message GetResponse {
  oneof response {
    common.Error error = 1;
    DVFiatAccount dvfiataccount = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional recipients.GetListRequest recipient = 1;
  optional bankbranches.GetListRequest bank_branch = 2;
  optional bankaccounts.TypeList bank_account_type = 3;
  optional uoms.GetListRequest currency = 4;
  optional string pan = 5;
  optional string masked_pan = 6;
  optional string bban = 7;
  optional string iban = 8;
  optional string external_id = 9;
}

message GetListResponse { // ListResponse is formatted for streaming
  oneof response {
    common.Error error = 1;
    DVFiatAccount dvfiataccount = 2;
  }
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    DVFiatAccount dvfiataccount = 2;
  }
}
